--- a/Frontend/src/Components/HeaderStyles.css
+++ b/Frontend/src/Components/HeaderStyles.css
@@ -1,7 +1,6 @@
 .header {
-  margin-top: 60px;
   width: 100%;
-  height: calc(100vh - 60px);
+  height: calc(100vh - 40px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,21 +10,18 @@
   text-align: center;
   width: 800px;
   height: 300px;
-  top:25%;
-  left: 53%;
-  padding: 30px;
-  transform: translate(-50%, -50%);
-  border-radius: 10px;
-  box-shadow: 5px 22px 22px rgba(24, 22, 22, 0.6);
-  margin-bottom: 30px;
-  position: absolute;
-  background-color: rgb(235, 230, 223);
+  background: transparent;
+  color: #fff;
+  border-radius: 12px;
+  backdrop-filter: blur(9px);
+  padding: 20px 20px;
 }
 .heading {
-  margin-bottom: 40px;
+  text-align: center;
 }
 .heading .moyen {
   font-size: 44px;
+  color: #000;
 }
 
 .heading .no-fill {
@@ -33,20 +29,4 @@
   color: transparent;
   -webkit-text-stroke: 2px #0b0a0a;
   font-size: 38px;
-}
-.btnLog {
-  text-decoration: none;
-  text-transform: capitalize;
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #fcab38;
-  color: white;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  margin-bottom: 20px;
-  align-items: center;
-  justify-content: center;
-  left: 50%;
-  margin-right: 10px;
 }
