--- a/Frontend/src/Pages/LoginPage.css
+++ b/Frontend/src/Pages/LoginPage.css
@@ -6,28 +6,30 @@
 }
 
 body {
+  background-image: url("../images/second.jfif");
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   background-position: center;
+  background-size: cover,contain;
 }
 .tit{
   color: #fcab38;
   margin-bottom: 40px;
 }
-.LoginFrame {
+.Login-Frame {
   margin-top: 40px;
   width: 420px;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, .2);
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 2px solid rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(9px);
-  color: #fff;
   border-radius: 12px;
   padding: 30px 40px;
+  
 }
 
-.LoginFrame h1 {
+.Login-Frame h1 {
   font-size: 36px;
   text-align: center;
 }
@@ -39,10 +41,10 @@ form {
 
 label {
   margin-bottom: 10px;
-  color: #fff;
+  color: #000;
 }
 label input::placeholder {
-  color: #fff;
+  color: #000;
 }
 input {
   width: 100%;
@@ -53,7 +55,7 @@ input {
   border: 2px solid rgba(255, 255, 255, .2);
   border-radius: 40px;
   font-size: 16px;
-  color: #fff;
+  color: #000;
   padding: 20px 45px 20px 20px;
 }
 
@@ -67,7 +69,7 @@ input {
   box-shadow: 0 0 10px rgba(0, 0, 0, .1);
   cursor: pointer;
   font-size: 16px;
-  color: #333;
+  color: #000;
   font-weight: 600;
   }
 
@@ -83,7 +85,7 @@ input {
   left: 50%;
   margin-right: 10px;
   text-align: center;
-  color: #fff;
+  color: #000;
 }
 .toSignUp a {
   color: #fcab38;
