--- a/Frontend/src/Pages/VitalParameterPage.css
+++ b/Frontend/src/Pages/VitalParameterPage.css
@@ -1,54 +1,86 @@
+body{
+  background-image: url(../images/5.jfif);
+  background-size: cover,contain;
+  margin: 0;
+  padding: 0;
 
+}
 .home{
-    width: 1343px;
+    width: 1000px;
     height: 100%;
-}
-.links-container {
-  display: flex;
-  list-style: none;
-}
-
-.link {
-  padding: 10px;
-  margin-left: 5px;
-  text-decoration: none;
-  text-transform: capitalize;
-  color: #000;
-}
-.btn {
-  text-decoration: none;
-  text-transform: capitalize;
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #fcab38;
-  color: white;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  margin-top: 10px;
-  align-items: center;
-  justify-content: center;
-  left: 50%;
-  margin-right: 10px;
-  margin-left: 20px;
+    background-size: cover,contain;
+    background: transparent;
+    box-shadow: #000;
+    
+    
 }
 
 .principale {
-    width: 100%;
+  width: 100%;
   font-family: Arial, sans-serif;
-  margin-top: 60px;
+  margin-top: 40px;
   padding: 20px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 5px;
-  background-color: rgb(239, 237, 234);
+  background: none;
+
+}
+.principale div {
+  width: 500px;
+  height: 200px;
+  margin-bottom: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+  margin-bottom: 50px;
+  padding-left: 20px;
+  margin-left: 30px ;
 }
 
-.link {
+.principale div:hover {
+  transform: scale(1.05);
+}
+
+
+
+.principale .text {
+  line-height: 30px;
   color: #000;
-}
-.link:hover {
-  color: aliceblue;
+  font-family: "Lato-ExtraBold", Helvetica;
+  font-size: 20px;
+  margin-bottom: 10px;
+  font-weight: bold; 
+  font-style: italic; /* Ajout de cette ligne */
 }
 
+
+.principale p {
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: 10px;
+  color: #555;
+}
+
+.popup {
+  background: orange;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin-top: 20px; /* Adjust as needed */
+}
+
+/* Additional styles for the input and buttons */
+.popup input{
+  height: 30px;
+  margin-top: 10px;
+}
+.popup label,
+.popup button {
+  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-left: 3px;
+}
