--- a/Frontend/src/Pages/AboutPage.css
+++ b/Frontend/src/Pages/AboutPage.css
@@ -1,6 +1,6 @@
 
 .home2 {
-  width:1342px;
+  width: 98.9vw;
   position: relative;
   font-family: "poppins", sans-serif;
   background-color: rgb(246, 243, 240);
