--- a/Frontend/src/Pages/LoginPage.css
+++ b/Frontend/src/Pages/LoginPage.css
@@ -5,12 +5,13 @@
   font-family: "Poppins", sans-serif;
 }
 
-body {
+.general {
   background-image: url("../images/second.jfif");
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  width: 100vw;
   background-position: center;
   background-size: cover,contain;
 }
