--- a/Frontend/src/Pages/VitalParameterPage.css
+++ b/Frontend/src/Pages/VitalParameterPage.css
@@ -3,6 +3,8 @@ body{
   background-size: cover,contain;
   margin: 0;
   padding: 0;
+  justify-content: center;
+  align-items: center;
 
 }
 .home{
